# swarm

./: .env  .gitignore  GEMINI.md  INSTRUCTIONS.md  PROJECT_SCOPE.md  README.md  TODO.md  UIFIX.md  codex.py  config.yaml  fix.md  gemini.py  hermes.py  index_database_plan.md  opencode.py  patch.diff  pyproject.toml  requirements.txt  swarm  swarm-repo.bundle  verify_ui.py  verify_ui_cuj.py
.archive/: index_database_plan.md
.context-engine/: git_history_cache.json
.jules/: bolt.md  palette.md  sentinel.md
.planning/: 10-CONTEXT.md  11-CONTEXT.md  12-CONTEXT.md  13-CONTEXT.md  14-CONTEXT.md  8-CONTEXT.md  9-CONTEXT.md  ROADMAP.md  STATE.md
.planning/plans/: 02-1-PLAN.md  02-2-PLAN.md  02-3-PLAN.md  04-1-PLAN.md  04-2-PLAN.md  04-3-PLAN.md  05-1-PLAN.md  06-1-PLAN.md  06-2-PLAN.md  (+27 more)
.polyglot/: test.db  test_event_bus.db
docs/: HANDOFF.md  README.md  plan-openai-compat.md  plan.md
src/: __init__.py  main.py
tests/: test_api_auth.py  test_claude_code_runtime.py  test_codex_runtime.py  test_end_to_end.py  test_event_bus.py  test_event_wiring.py  test_gemini_runtime.py  test_hermes_runtime.py  test_insert_event_reducer.py  test_integration.py  test_merge_manager.py  test_merge_manager_simple.py  test_merge_manager_unit.py  test_model_selector.py  test_model_selector_simple.py  test_openai_compat.py  test_opencode_runtime.py  test_orchestrator.py  test_overseer_input.py  test_prompts.py  test_runtime_validation.py  test_safety.py  test_secure_input.py  test_ssh_runtime_security.py  test_t02_insert.py  test_tui.py  test_vibe_runtime.py  verify_t02_import.py
(+103 files in other folders)
